fixed spacing in card

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,7 +4,6 @@ border: solid black 2px;
 
 #filter-container {
     display: flex; 
-    flex-direction: row; 
     justify-content: center;
     gap: 20px; 
 }
@@ -29,21 +28,17 @@ ul {
     align-items: center;
     flex-direction: column;
     gap: 20px;
-    margin-top: 20px;
 }
 
 .card {
-    display: flex;
     width: 50%;
-    justify-content: center;
-    align-items: center;
     padding: 10px;
     border: solid black 2px;
     text-align: center;
 }
 
 img {
-    margin-right: 50px;
     width: 20%;
     border: solid black 2px;
+    float:left;
 }
